<resources>
    <string name="app_name" translatable="false">星缘</string>
    <string name="label_star" translatable="false">星座</string>
    <string name="label_star_details" translatable="false">星座详情</string>
    <string name="label_star_feedback" translatable="false">历史反馈</string>
    <string name="label_partnership" translatable="false">配对</string>
    <string name="label_luck" translatable="false">运势</string>
    <string name="label_me" translatable="false">我的</string>
    <string name="starCharacter" translatable="false">星座特性：</string>
    <string name="starParse" translatable="false">星座解析</string>
    <string name="man" translatable="false">男生</string>
    <string name="woman" translatable="false">女生</string>
    <string name="partnership_info" translatable="false">分别选择男生星座和女生星座，再点击匹配分析即可查看。</string>
    <string name="start_partnership" translatable="false">匹配分析</string>
    <string name="lucky" translatable="false">放松一下</string>
    <string name="historyToday" translatable="false">历史上的今天</string>
    <string name="jieshao" translatable="false">功能介绍</string>
    <string name="guanyu" translatable="false">用户信息</string>
    <string name="appInfo" translatable="false">用户信息</string>
    <string name="tuichu" translatable="false">退出登陆</string>
    <string name="weather" translatable="false">出行天气</string>
    <string name="nameLookup" translatable="false">姓氏查找</string>
    <string name="huanfu" translatable="false">主题换肤</string>
    <string name="login" translatable="false">登录</string>
    <string name="register" translatable="false">注册</string>
    <string name="eduser" translatable="false">请输入用户名</string>
    <string name="edpwd" translatable="false">请输入密码</string>
    <string name="oldPwd" translatable="false">输入原密码</string>
    <string name="newPwd" translatable="false">输入新密码</string>
    <string name="newPwdConfig" translatable="false">再次确认密码</string>
    <string name="updateConfig" translatable="false">确认修改</string>
    <string name="configNewPwd" translatable="false">确认新密码</string>
    <string name="pwdFindByLogin" translatable="false">密码已找回，前往登录</string>
    <string name="buyFind" translatable="false">立即找回</string>
    <string name="auto_login" translatable="false">免登录</string>
    <string name="remember_pwd" translatable="false">记住密码</string>
    <string name="no_register" translatable="false">没有账号？前往注册</string>
    <string name="forgetPwd" translatable="false">忘记密码?</string>
    <string name="youzhanghao" translatable="false">我已有账号，快速登录</string>
    <string name="cloth" translatable="false">穿衣指数</string>
    <string name="cold" translatable="false">感冒指数</string>
    <string name="rays" translatable="false">紫外线指数</string>
    <string name="air" translatable="false">空调指数</string>
    <string name="sport" translatable="false">运动指数</string>
    <string name="washCar" translatable="false">洗车指数</string>
    <string name="cityManager" translatable="false">城市管理</string>
    <string name="searchCity" translatable="false">搜索国内城市</string>
    <string name="hotCity" translatable="false">热门城市</string>
    <string name="moreSet" translatable="false">更多设置</string>
    <string name="green" translatable="false">青瓦白墙</string>
    <string name="pink" translatable="false">粉妆玉砌</string>
    <string name="blue" translatable="false">透明润泽</string>
    <string name="updateBg" translatable="false">更换壁纸</string>
    <string name="clear" translatable="false">清理缓存</string>
    <string name="version" translatable="false">应用版本</string>
    <string name="updatePwd" translatable="false">修改密码</string>
    <string name="cancelUser" translatable="false">注销账号</string>
    <string name="feedback" translatable="false">意见反馈</string>
    <string name="phone" translatable="false">手机号</string>
    <string name="userName" translatable="false">用户名</string>
    <string name="updateTime" translatable="false">近期更新时间</string>
    <string name="registerTime" translatable="false">账号注册时间</string>
    <string name="enjoyApp" translatable="false">分享应用</string>
    <string name="sameApp" translatable="false">同款应用</string>
    <string name="enjoy" translatable="false">分享</string>
    <string name="about" translatable="false">关于我们</string>
    <string name="defaultBg" translatable="false">默认壁纸</string>
    <string name="star" translatable="false">星夜彩绘</string>
    <string name="findCity" translatable="false">查找城市</string>
    <string name="deleteCity" translatable="false">删除城市</string>
    <string name="findDict" translatable="false">姓氏查询</string>
    <string name="set" translatable="false">设置</string>
    <string name="go_to_add" translatable="false">《前往添加...》</string>
    <string name="findText" translatable="false">请输入需要查找的文字</string>
    <string name="findChengyu" translatable="false">请输入需要查找的成语</string>
    <string name="pinyinQuery" translatable="false">拼音查找</string>
    <string name="bushouQuery" translatable="false">部首查找</string>
    <string name="chengyuQuery" translatable="false">成语查找</string>
    <string name="chengyuInfo" translatable="false">成语详情</string>
    <string name="xiangji" translatable="false">图文识字</string>
    <string name="everyDay" translatable="false">每日金句</string>
    <string name="tongyici" translatable="false">同义词</string>
    <string name="fanyici" translatable="false">反义词</string>
    <string name="loading" translatable="false">加载中...</string>
    <string name="wordInfo" translatable="false">文字详情</string>
    <string name="JiBenJieS" translatable="false">基本解释</string>
    <string name="InfoJieS" translatable="false">详细解释</string>
    <string name="history" translatable="false">历史记录</string>
    <string name="buShou" translatable="false">部首：null</string>
    <string name="wuBi" translatable="false">五笔：null</string>
    <string name="biHua" translatable="false">笔画：null</string>
    <string name="collect" translatable="false">收藏</string>
    <string name="more" translatable="false">更多</string>
    <string name="channel" translatable="false">频道订阅</string>
    <string name="lifeTally" translatable="false">生活记账</string>
    <string name="setbeizhu" translatable="false">设置备注</string>
    <string name="addBeizhu" translatable="false">添加备注</string>
    <string name="addCity" translatable="false">添加城市</string>
    <string name="inputHintBiezhu" translatable="false">请输入备注（限50字以内）</string>
    <string name="inputTimeHint" translatable="false">请输入时间（24小时制）</string>
    <string name="monthOut" translatable="false">本月支出</string>
    <string name="monthIn" translatable="false">本月收入 </string>
    <string name="yusuan" translatable="false">预算余额 </string>
    <string name="lookProject" translatable="false">查看图表分析</string>
    <string name="setMoney" translatable="false">设置金额</string>
    <string name="ok" translatable="false">好的</string>
    <string name="author" translatable="false">作者</string>
    <string name="tallyInfo" translatable="false">账单详情</string>
    <string name="tallyJilu" translatable="false">账单记录</string>
    <string name="search" translatable="false">查找一下</string>
    <string name="searchRecord" translatable="false">查找记录</string>
    <string name="findByBeizhu" translatable="false">请输入需要查找的记录</string>
    <string name="clearRecord" translatable="false">清空记录</string>

    <string name="out" translatable="false">支出</string>
    <string name="in" translatable="false">收入</string>
    <string name="chartAnalyse" translatable="false">图表分析</string>
    <string name="next" translatable="false">下一步</string>
    <string name="Myemail" translatable="false"><u>phxwyy@163.com</u></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <!--    <string name="hello_blank_fragment">Hello blank fragment</string>-->
</resources>