<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.PartnershipFragment"
    android:orientation="vertical"
    android:paddingRight="@dimen/dimen_20dp"
    android:paddingLeft="@dimen/dimen_20dp"
    android:paddingTop="@dimen/dimen_20dp"
    android:background="@drawable/bg">



    <LinearLayout
        android:id="@+id/partnershipFrag_layout_man"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_130dp"
        android:orientation="horizontal"

        android:padding="@dimen/dimen_15dp"
        android:background="@drawable/partnership_man_bg">
        <TextView
            android:id="@+id/partnershipFrag_tv_man"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/man"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/partnershipFrag_iv_man"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/partnershipFrag_sn_man"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/partnershipFrag_layout_woman"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_130dp"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:padding="@dimen/dimen_15dp"
        android:background="@drawable/partnership_woman_bg"
        android:layout_below="@+id/partnershipFrag_layout_man">
        <TextView
            android:id="@+id/partnershipFrag_tv_woman"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/woman"
            android:textColor="@color/white"
            android:textSize="@dimen/size_18sp"
            android:textStyle="bold"
            android:gravity="center"/>

        <ImageView
            android:id="@+id/partnershipFrag_iv_woman"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <Spinner
            android:id="@+id/partnershipFrag_sn_woman"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"/>
    </LinearLayout>

    <TextView
        android:id="@+id/partnershipFrag_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/partnership_info"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:layout_below="@+id/partnershipFrag_layout_woman"
        android:textSize="@dimen/size_16sp"
        android:textColor="@color/gray_600"/>



    <Button
        android:id="@+id/partnershipFrag_btn_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start_partnership"
        android:layout_marginTop="@dimen/dimen_50dp"
        android:textSize="@dimen/size_16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:background="@drawable/selector_partnership_btn_bg"/>


    <Button
        android:id="@+id/partnershipFrag_btn_lucky"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/selector_partnership_btn_bg"
        android:text="@string/lucky"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"/>

    <Button
        android:id="@+id/partnershipFrag_btn_game"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_20dp"
        android:background="@drawable/selector_partnership_btn_bg"
        android:text="@string/historyToday"
        android:textColor="@color/white"
        android:textSize="@dimen/size_16sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/dimen_20dp"/>
</LinearLayout>