<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="@dimen/dimen_15dp"
    app:cardBackgroundColor="@color/yellow_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dimen_10dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/tally_more_dialog_cv_search"
                android:layout_marginRight="@dimen/dimen_10dp"
                style="@style/tally_morey_dialog_cv_style"
                app:cardCornerRadius="@dimen/dimen_10dp"
                android:layout_marginLeft="@dimen/dimen_20dp">

                <TextView
                    android:text="@string/search"
                    android:drawableTop="@drawable/ic_baseline_search_24"
                    style="@style/tally_more_dialog_tv_style"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tally_more_dialog_cv_tallyJilu"
                style="@style/tally_morey_dialog_cv_style"
                app:cardCornerRadius="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp">

                <TextView
                    android:text="@string/tallyJilu"
                    android:drawableTop="@drawable/ic_tally_more_jilu"
                    style="@style/tally_more_dialog_tv_style"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tally_more_dialog_cv_tallyInfo"
                style="@style/tally_morey_dialog_cv_style"
                app:cardCornerRadius="@dimen/dimen_10dp"
                android:layout_marginRight="@dimen/dimen_10dp">

                <TextView
                    android:text="@string/tallyInfo"
                    android:drawableTop="@drawable/ic_tally_more_info"
                    style="@style/tally_more_dialog_tv_style"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/tally_more_dialog_cv_set"
                style="@style/tally_morey_dialog_cv_style"
                app:cardCornerRadius="@dimen/dimen_10dp"
                android:background="@color/white"
                android:layout_marginRight="@dimen/dimen_20dp">

                <TextView
                    android:text="@string/clearRecord"
                    android:drawableTop="@drawable/ic_baseline_settings_25"
                    style="@style/tally_more_dialog_tv_style"/>

            </androidx.cardview.widget.CardView>

        </LinearLayout>

        <ImageView
            android:id="@+id/tally_more_dialog_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon_close"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:layout_marginBottom="@dimen/dimen_20dp"/>
    </LinearLayout>


</androidx.cardview.widget.CardView>